layout shift fixed

--- a/style/fields/droparea.css
+++ b/style/fields/droparea.css
@@ -1,5 +1,6 @@
 .dropzone {
-  border: 1px dashed var(--stroke-dft);
+  border: 2px dashed transparent;
+  outline: 1px dashed var(--stroke-dft);
   border-radius: .2rem;
 
   display: grid;
@@ -24,7 +25,7 @@
   }
 
   &:hover, &:has(input:focus) {
-    border-width: 2px;
+    outline-width: 0;
     border-color: var(--stroke-hlt);
     background-color: var(--surface-sec);
 
